--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sendbird/chat": "^4.17.1",
     "@sendbird/uikit-react": "^3.16.1",
+    "date-fns": "^4.1.0",
     "next": "15.2.2",
     "next-pwa": "^5.6.0",
     "react": "^19.0.0",
